--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@drop-in/graffiti": "^4.15.1",
 		"postgres": "^3.4.8"
 	}
 }
